kibana/kibana-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: default
  labels:
    component: kibana
spec:
  selector:
    component: kibana
  ports:
  - name: kibana
    port: 5601
    targetPort: http
