kibana/kibana-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: kibana.aks1.azure.strapcloud.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
